samples/_failures_safe/1761445256_08a778_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dc8163c7.c: In function ‘main’:
./samples/SAFE/__tmp_dc8163c7.c:118:5: error: ‘MATRIX_PRINT’ undeclared (first use in this function)
  118 |     MATRIX_PRINT
      |     ^~~~~~~~~~~~
./samples/SAFE/__tmp_dc8163c7.c:118:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_dc8163c7.c:118:17: error: expected ‘;’ at end of input
  118 |     MATRIX_PRINT
      |                 ^
      |                 ;
./samples/SAFE/__tmp_dc8163c7.c:118:5: error: expected declaration or statement at end of input
  118 |     MATRIX_PRINT
      |     ^~~~~~~~~~~~
